--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 body{
-    background: url( asset-path('real.jpg') ) no-repeat;
+    background: url( asset-path('.jpg') ) no-repeat;
     background-size: 100% 100%;
     height: 800px;
    
