--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -145,10 +145,19 @@ a{color:inherit;text-decoration:none}
   <p>
   <%= f.label :rent,class:"label"%>
   <%= f.number_field :rent, class:"input"%>
- 
+  </p>
+  <br>
+  <p>
+<%= f.label :Addimages,class:"label"%>
+ <%= f.file_field :images, multiple: true ,class:"input"%>
+ </p>
   <br>
     <%= f.submit  "Add properties" ,class:"btn"%>
-  
+  <% if flash[:messages] %>
+    <% flash[:messages].each do |message| %>
+      <h2><%= message%></h2> <br>
+    <% end %>
+  <% end %>
 
 <% end %>
  
