--- a/app/views/properties/showwish.html.erb
+++ b/app/views/properties/showwish.html.erb
@@ -133,70 +133,64 @@ width:100%;
 .align{
 	margin-right: 1000px;
 }
-.btn {
+.btn1 {
   border: none;
   background-color: orange;
   padding: 14px 28px;
   border-radius: 12px;
   font-size: 16px;
+  margin-left: ;
   cursor: pointer;
   color: black;
   display: inline-block;
 }
-.btn1 {
+.btnr {
   border: none;
-  background-color: blue;
-  <% #padding: 14px 28px; %>
-  border-radius: 22px;
-  font-size: 14px;
+  background-color: orange;
+  padding: 14px 28px;
+  border-radius: 12px;
+  font-size: 16px;
+  margin-left: 90%;
   cursor: pointer;
-  color: white;
+  color: black;
   display: inline-block;
 }
-.btnr {margin-left:175px;
+.btns{
+  border: none;
+  background-color: blue;
+  padding: 14px 28px;
+  border-radius: 12px;
+  font-size: 13px;
+color:white;
+  cursor: pointer;
+  
+  display: inline-block;
+}
 
-  border: none;
-  background-color: blue;
-  margin-left:260px;
-  border-radius: 22px;
-  font-size: 14px;
-  cursor: pointer;
-  color: white;
-  display: inline-block;
-}
-.btn:hover, .btnr:hover, .btn1:hover {
+
+.btn1:hover, .btnr:hover, .btn1:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 </style>
-Welcome <%=@agent.name%>
-<h1 text-align:center ,color:darkblue> Your Properties</h1>
 
+
+<h1 text-align:center ,color:darkblue> Welcome <%=@renter.name%></h1>
 
 
 	<div class="login-form">
 	<div class="sign-in-htm">
-	<span class="align">
-	<button class="btn">
-<%= link_to "Addproperties", addprop_path(@agent) %></button>
-</span>
-<button class="btn">
-<%= link_to "logout", destroy_agent_session_path, method: :delete %>
+<button class="btnr">
+<%= link_to "logout", destroy_renter_session_path, method: :delete %>
 </button>
 <br>
-<% if @agent.properties %>
-<%= puts "no properties were added"%>
-<% else%>
-<%= puts "properties are there"%>
-<% end%>
-<br>
-<% @agent.properties.each do |prop|%>
+<h3 text-align:center>your wish lists</h3>
+<% if @properties == nil %>
+<% puts "noproperties"%>
+<%end%>
+<% @properties.each do |prop|%>
+<% prop = Property.find(prop.property_id)%>
 <div class="clearfix">
 <div class="box" style="background-color: ">
-<button class="btn1">
-<%=link_to "Edit" ,edit_property_path(prop)%></button> 
-<button class="btnr" >
-<%= link_to 'Delete', property_path(prop),
-                    method: :delete, data: { confirm: 'Are you sure?' } %></button> 
 <h2 class="center"><%= prop.name%><br></h2>
 <span >Property Location :</span>
 <span class="border"><%= prop.address %></span><br>
@@ -205,17 +199,9 @@ Welcome <%=@agent.name%>
 <span >Property City</span>
 <span class="border"><%= prop.city%></span><br>
 <span >Number of bedrooms</span>
-
-<%#(0...prop.images.count).each do |img| %>
-<%#= image_tag(prop.images[img])%>
-<%#end%>
-
-
-
 <span class="border"><%= prop.bedrooms%></span><br>
-<span >About Property</span>
-<span class="border"><%= prop.description%></span>
-
+<button class="btns">
+<%= link_to "Expore this property", viewproperty_path(prop)%>
+</button>
 </div>
-<div>
 <% end %>
