--- a/app/views/renters/confirmations/new.html.erb
+++ b/app/views/renters/confirmations/new.html.erb
@@ -1,16 +1,126 @@
-<h2>Resend confirmation instructions</h2>
+<!DOCTYPE html>
+<html>
+<head>
+
+	<style >
+		body{
+	margin:0;
+	color:#6a6f8c;
+	background:#c8c8c8;
+	font:600 16px/18px 'Open Sans',sans-serif;
+  background-color: blue;
+
+  
+}
+*,:after,:before{box-sizing:border-box}
+.clearfix:after,.clearfix:before{content:'';display:table}
+.clearfix:after{clear:both;display:block}
+a{color:inherit;text-decoration:none}
+
+.login-wrap{
+	width:100%;
+	margin:auto;
+	max-width:525px;
+	min-height:570px;
+	position:relative;
+	 background-color: darkblue; 
+   border-radius: 40px;
+	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
+}
+
+
+.login-html .tab,
+.login-form .group .label,
+.login-form .group .button{
+	text-transform:uppercase;
+}
+
+
+.login-form{
+	min-height:345px;
+	position:relative;
+	perspective:1000px;
+	transform-style:preserve-3d;
+}
+.login-form .group{
+	margin-bottom:15px;
+}
+.group.label,
+.group.button,
+.group.input,
+.input{
+	width:100%;
+	color:#fff;
+	display:block;
+  	border-radius:25px;
+}
+.login-form .group .input,
+.login-form .group .button{
+	border:none;
+	padding:15px 20px;
+	border-radius:25px;
+	background:rgba(255,255,255,.1);
+}
+
+.login-form .group .label{
+	color:#aaa;
+	font-size:12px;
+}
+.login-form .group .button{
+	background:#1161ee;
+}
+
+.button{
+ background:#1161ee; 
+ border:none;
+	padding:15px 20px;
+	border-radius:25px;
+	background: blue;
+  color:black;
+  
+}
+.hr{
+	height:2px;
+	margin:60px 0 50px 0;
+	background:rgba(255,255,255,.2);
+}
+.foot-lnk{
+	text-align:center;
+}
+.right{
+   margin-left: 350px;
+   color:black;
+}
+.center{
+  text-align:center;
+}
+</style>
+<body>
+<h1 text-align:center ,color:darkblue> Resend confirmation instructions</h1>
+<div class="login-wrap">
+
+	<div class="login-form">
+	<div class="sign-in-htm">
+
 
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+ <br>
   <%= render "renters/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
-  </div>
-
+<br><br>
+  <div class="group">
+    <%= f.label :email ,class: "label"%><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: "input" %>
+ 
+<br>
   <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
+    <%= f.submit "Resend confirmation instructions" ,class: "button" %>
   </div>
 <% end %>
-
+<br>
+<br>
+<div class="center">
 <%= render "renters/shared/links" %>
+</div>
+</body>
+</html>
+
