--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,11 +1,12 @@
+<%#homepage of the application %>
+
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
-   
 </head>
-<body>
 
+<body>
 <h1 id=head> Real Estate Property Application</h1>
 <div id="parent">
         <div id="left">
@@ -15,7 +16,7 @@
         <div id="right">
        <%= link_to 'Agent',new_agent_registration_path ,class: 'But2'%>
         </div>
-    </div>
+</div>
 
 <p class= buy> Why Buy?  Rent One..</p>
 <p class = buy1> save time <br>  save money</p>
