--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,75 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <style>
+  
+
+
+*,:after,:before{box-sizing:border-box}
+.clearfix:after,.clearfix:before{content:'';display:table}
+.clearfix:after{clear:both;display:block}
+a{color:inherit;text-decoration:none}
+
+		.login-wrap{
+		width:100%;
+		margin:auto;
+		max-width:525px;
+		min-height:670px;
+		position:relative;
+		background-color: darkblue; 
+  		border-radius: 40px;
+		box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
+		}
+
+
+		.login-html .tab,
+		.login-form .group .label,
+		.login-form .group .button{
+			text-transform:uppercase;
+		}
+
+
+		.login-form{
+		min-height:345px;
+		position:relative;
+		perspective:1000px;
+		transform-style:preserve-3d;
+		}
+		.login-form .group{
+		margin-bottom:15px;
+		}
+	.group.label,
+	.group.button,
+	.group.input,
+	.input{
+	width:100%;
+	color:#fff;
+	display:block;
+  	border-radius:25px;
+		}
+	.login-form .group .input,
+	.login-form .group .button{
+		border:none;
+		padding:15px 20px;
+		border-radius:25px;
+		background:rgba(255,255,255,.1);
+		}
+
+	.login-form .group .label{
+	color:#aaa;
+	font-size:12px;
+	}
+	.login-form .group .button{
+	background:#1161ee;
+	}
+
+
+
+  .foot-lnk{
+	text-align:center;
+}
+  </style>
+  
   </head>
 
   <body>
