--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -9,9 +9,9 @@
 Welcome <%=@renter.name%>
 <h1 text-align:center ,color:darkblue> Your Properties</h1>
 
-
-
-	
+<button class="btn">
+<%=link_to "back",viewprop_path%>
+	</button>
 <button class="btn">
 <%= link_to "logout", destroy_renter_session_path, method: :delete %>
 </button>
