--- a/app/views/properties/showrented.html.erb
+++ b/app/views/properties/showrented.html.erb
@@ -9,88 +9,8 @@
 	background:#c8c8c8;
 	font:600 16px/18px 'Open Sans',sans-serif;
   background-color: darkorange;
+	}
 
-  
-}
-*,:after,:before{box-sizing:border-box}
-.clearfix:after,.clearfix:before{content:'';display:table}
-.clearfix:after{clear:both;display:block}
-a{color:inherit;text-decoration:none}
-
-.login-wrap{
-	width:100%;
-	margin:auto;
-	max-width:525px;
-	min-height:670px;
-	position:relative;
-	 background-color: darkblue; 
-   border-radius: 40px;
-	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
-}
-
-
-.login-html .tab,
-.login-form .group .label,
-.login-form .group .button{
-	text-transform:uppercase;
-}
-
-
-.login-form{
-	min-height:345px;
-	position:relative;
-	perspective:1000px;
-	transform-style:preserve-3d;
-}
-.login-form .group{
-	margin-bottom:15px;
-}
-.group.label,
-.group.button,
-.group.input,
-.input{
-	width:100%;
-	color:#fff;
-	display:block;
-  	border-radius:25px;
-}
-.login-form .group .input,
-.login-form .group .button{
-	border:none;
-	padding:15px 20px;
-	border-radius:25px;
-	background:rgba(255,255,255,.1);
-}
-
-.login-form .group .label{
-	color:#aaa;
-	font-size:12px;
-}
-.login-form .group .button{
-	background:#1161ee;
-}
-
-.button{
- background:#1161ee; 
- border:none;
-	padding:15px 20px;
-	border-radius:25px;
-	background: blue;
-  color:black;
-  
-}
-.hr{
-	height:2px;
-	margin:60px 0 50px 0;
-	background:rgba(255,255,255,.2);
-}
-.foot-lnk{
-	text-align:center;
-}
-.right{
-   margin-left: 350px;
-   color:black;
-}
 .center{
   text-align:center;
 }
@@ -130,9 +50,7 @@ width:100%;
 
 	background:rgba(255,255,255,.1);
 }
-.align{
-	margin-right: 1000px;
-}
+
 .btn1 {
   border: none;
   background-color: orange;
@@ -150,7 +68,7 @@ width:100%;
   padding: 14px 28px;
   border-radius: 12px;
   font-size: 16px;
-  margin-left: 90%;
+  margin-left: 80%;
   cursor: pointer;
   color: black;
   display: inline-block;
@@ -166,7 +84,10 @@ color:white;
   
   display: inline-block;
 }
-
+.center{
+	text-align:center;
+	font-size: 24px;
+}
 
 .btn1:hover, .btnr:hover, .btn1:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
@@ -179,11 +100,14 @@ color:white;
 
 	<div class="login-form">
 	<div class="sign-in-htm">
+	<button class="btn1">
+	<%=link_to "back",viewprop_path%>
+	</button>
 <button class="btnr">
 <%= link_to "logout", destroy_renter_session_path, method: :delete %>
 </button>
 <br>
-<h3 text-align:center>your rented lists</h3>
+<h3 class="center">Your rented lists</h3>
 
 <% @properties.each do |prop|%>
 
