--- a/app/views/user_mailer/propertyrented.html.erb
+++ b/app/views/user_mailer/propertyrented.html.erb
@@ -4,15 +4,14 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>Hi, <%= @agent.name %></h1>
+    <h1>Hi <%= @renter.name %></h1>
     <p>
-      Your property <% @property.name%> has be approached by <% @renter.name%>, his details are given below, if u wish you can contact and make further move
-      Renter Name: <%= @renter.name %>.
-      <br/>
-      contact : <%= @renter.contact%>
-      email: <%=@renter.email%>
+      The property <%@property.name%> that you approached , that has been accepted by the owner of that particular property..his details are given below, you can connect him/her 
+      <br>Agent Name: <%= @agent.name %>.
+      <br>Agent email: <%=@agent.email%>
+      <br>contact : <%= @agent.contact%>
+     <br>
     </p>
-    
-    <p>Thanks for Using our website, have a great day</p>
+     <p>Thanks for Using our website, have a great day</p>
   </body>
 </html>
