--- a/app/views/agent/show.html.erb
+++ b/app/views/agent/show.html.erb
@@ -116,7 +116,7 @@
 		<span >About Property</span>
 
 		<span class="border"><%= prop.description%></span>
-
+		<button class="btn"><%=link_to "View Approached", viewapproach_path(prop)%></button>
 			</div>
 		<div>
 		<% end %>
