--- a/app/views/agents/registrations/new.html.erb
+++ b/app/views/agents/registrations/new.html.erb
@@ -99,21 +99,23 @@ border: none;
     		
    			 <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input" %>
    			 </div>
-   		</div>
+   		
 
 				<div class="hr"></div>
 				<div class="foot-lnk">
 					<label for="tab-1">Already have an account?</a>
 				</div>
-			</div>
+			
 		 
 		<div class="actions">
     <div class="group">
     	<%= f.submit "Sign up", class: "btnr" %>
 <span class="right"> 
     <%= link_to "Login", new_agent_session_path, class: "btnr"%></span>
-    </div>
+    </div></div>
 		<% end %>
+		</div>
+		</div>
 		</div>
 
 <div class="center">
