--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -68,20 +68,21 @@ ul.topnav li.right {float: right;}
 </ul>
 <div class="center">
 Welcome <%=@renter.name%>
-</div>
 
+</div>
+<%# if the particular property is not rentd means then we can approach that property%>
 <% if @property.flag == 0%>
-<button class="btn1">
-<%= link_to "Rent This", addrentedprop_path(@property)%>
-</button>
-<%ratingid=0%>
-<% else%>
+<%if @approachflag == 1%>
+your Approaches has been updated
+<%else%>
+<%= link_to "Approach Property", addapproach_path(@property)%>
+<%end%>
+<%else%>
 <%if @check.renter_id == current_renter.id %>
-Property has been already booked by you!
-<% ratingid =1%>
+The Agent Approved your request, check your mail and get connect with the agent:
 <%else%>
 Property has been already booked by someone
-<%ratingid=0%>
+Still you can add it to your wishlist
 <%= link_to "Add to wishlist", addwishlist_path(@property)%>
 <%end%>
 <%end%>
@@ -112,7 +113,7 @@ Property Images
 
 <%end%>
 <br>
-<%if ratingid == 1%>
+<%#if ratingid == 1%>
 provide some ratings and reviews 
 <%= form_for :@reviews, url:'/reviews'   do |f| %>
 <div class="group">
@@ -128,7 +129,7 @@ provide some ratings and reviews
   <br>
     <%= f.submit  "Add Reviews" ,class:"btn"%>
 </div>
-<%end%>
+<%#end%>
 <%end%>
 <% @reviewslist.each do|review|%>
 <div>
