--- a/app/views/agent/show.html.erb
+++ b/app/views/agent/show.html.erb
@@ -11,7 +11,7 @@
 		color:#6a6f8c;
 		background:#c8c8c8;
 		font:600 16px/18px 'Open Sans',sans-serif;
-  		background-color: darkorange;
+  		
 		}
 		.center{
 		text-align: center;
@@ -24,14 +24,14 @@
 
 	.box {
  	 float: left;
-  	width: 32.33%;
+  	width: 27.33%;
   	padding: 30px;
   	margin-left: 10px;
 	border-collapse: collapse;
     background-color:darkblue; 
    	border-radius: 40px;
 	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
-    min-height: 600px;
+    min-height: 500px;
 		}
 
 	.clearfix::after {
@@ -45,16 +45,17 @@
 		border-radius: 10px;color: black;
 		width:100%;color:#ccc;
 		display:block;border-radius:25px;
-  		border:none;padding:15px 20px;
+  		border:none;padding: 8px 10px;
 		background:rgba(255,255,255,.1);	
 			}
 	.align{
 	margin-right: 1000px;
 		}
 	.btn {
-  		border: none;font-size: 16px;
-  		cursor: pointer;background-color: orange;
-  		color: black;padding: 14px 28px;
+  		border: none;font-size: 13px;
+  		cursor: pointer;
+		background-color: blue;
+  		color: white;padding: 5px 10px;
   		border-radius: 12px;
   		display: inline-block;
   		}
@@ -67,11 +68,11 @@
     		}
 
 	.btnr {
-		margin-left:175px;
+		
  	 	border: none;border-radius: 22px;
   		font-size: 14px;display: inline-block;
  	 	background-color: blue;
- 	 	margin-left:260px;color: white;
+ 	 	margin-left:188px;color: white;
   		cursor: pointer;
   			}
 
@@ -79,7 +80,55 @@
 	  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 	}
 
+.btns{
+  border: none;
+  background-color: blue;
+  border-radius: 5px;
+  font-size: 13px;
+  padding: 4px 4px;
+  color:white;
+  cursor: pointer;
+  display: inline-block;
+}
+
+
+ .btns:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #6699ff;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: blue;
+}
+.header{
+  text-align:center;
+  font-size:30px;
+  color:blue;
+}
+
 </style>
+<ul>
+  <li><%= link_to "Addproperties", addprop_path(@agent) ,class:"active"%></li>
+   <li style="float:right"><%= link_to "logout", destroy_agent_session_path, method: :delete %></li>
+</ul>
 
 <br>
 <div class="center">Welcome <%=@agent.name%></div>
@@ -87,13 +136,6 @@
 
 	<div class="login-form"> <div class="sign-in-htm">
 	
-	<span class="align">
-	<button class="btn"><%= link_to "Addproperties", addprop_path(@agent) %></button>
-	</span>
-
-    <button class="btn"><%= link_to "logout", destroy_agent_session_path, method: :delete %></button>
-	<br>
-
 	<% @agent.properties.each do |prop|%>
 		<div class="clearfix">
 		<div class="box" style="background-color: ">
