--- a/app/views/properties/edit.html.erb
+++ b/app/views/properties/edit.html.erb
@@ -20,7 +20,9 @@
     color: black;
     display: inline-block;
     }
-
+.center{
+  font-size:18px;
+}
   .btn:hover {
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   }
@@ -32,7 +34,7 @@
 
 	<div class="login-form"> <div class="sign-in-htm">
 	
-<h1>Editing property</h1>
+<h1 class="center">Editing property</h1>
  <br>
 <%= form_for :property, url: property_path(@property), method: :patch do |f| %>
   <% if @property.errors.any? %>
