--- a/app/views/renter/show.html.erb
+++ b/app/views/renter/show.html.erb
@@ -8,11 +8,77 @@
 	color:#6a6f8c;
 	background:#c8c8c8;
 	font:600 16px/18px 'Open Sans',sans-serif;
-  background-color: darkorange;
+  background-color: ;
 	}
+
+  *,:after,:before{box-sizing:border-box}
+.clearfix:after,.clearfix:before{content:'';display:table}
+.clearfix:after{clear:both;display:block}
+a{color:inherit;text-decoration:none}
+
+		.login-wrap{
+		width:100%;
+		margin:auto;
+		max-width:525px;
+		min-height:600px;
+		position:relative;
+		background-color: darkblue; 
+  		border-radius: 40px;
+		box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
+		}
+
+
+		.login-html .tab,
+		.login-form .group .label,
+		.login-form .group .button{
+			text-transform:uppercase;
+		}
+
+
+		.login-form{
+		min-height:345px;
+		position:relative;
+		perspective:1000px;
+		transform-style:preserve-3d;
+		}
+		.login-form .group{
+		margin-bottom:15px;
+		}
+	.group.label,
+	.group.button,
+	.group.input,
+	.input{
+	width:100%;
+	color:#fff;
+	display:block;
+  	border-radius:25px;
+		}
+	.login-form .group .input,
+	.login-form .group .button{
+		border:none;
+		padding:15px 20px;
+		border-radius:25px;
+		background:rgba(255,255,255,.1);
+		}
+
+	.login-form .group .label{
+	color:#aaa;
+	font-size:10px;
+	}
+	.login-form .group .button{
+	background:#1161ee;
+	}
+
+
+
+  .foot-lnk{
+	text-align:center;
+}
+
 
 .center{
   text-align:center;
+  color:white;
 }
 
 *{
@@ -21,14 +87,15 @@
 
 .box {
   float: left;
-  width: 32.33%;
+  width: 23.33%;
   padding: 30px;
   margin-left: 10px;
 	border-collapse: collapse;
-    background-color:darkblue; 
+  background-color:darkblue; 
    border-radius: 40px;
 	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
-    min-height: 600px;
+    min-height: 300px;
+    
 }
 
 .clearfix::after {
@@ -78,43 +145,60 @@ width:100%;
 .btns{
   border: none;
   background-color: blue;
-  padding: 14px 28px;
-  border-radius: 12px;
+  border-radius: 5px;
   font-size: 13px;
-color:white;
+  padding: 4px 4px;
+  color:white;
   cursor: pointer;
   
   display: inline-block;
 }
 
 
-.btn1:hover, .btnr:hover, .btn1:hover {
+ .btns:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #6699ff;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: blue;
+}
+.header{
+  text-align:center;
+  font-size:30px;
+  color:blue;
 }
 </style>
 
+<ul>
+  <li><%= link_to "RentedList", rentedlistp_path ,class:"active"%></li>
+  <li><%= link_to "Wishlist",wishlistp_path, style: 'color: #FFFFFF' %></li>
+   <li style="float:right"><%= link_to "logout", destroy_renter_session_path, method: :delete %></li>
+</ul>
 
-<h1 text-align:center ,color:darkblue> Welcome <%=@renter.name%></h1>
-
-
+<h1 class="header"> Welcome <%=@renter.name%></h1>
 
 	<div class="login-form">
 	<div class="sign-in-htm">
-	
 
-<button class="btn1">
-<%= link_to "RentedList", rentedlistp_path %>
-</button>
-<button class="btn1">
-<%= link_to "Wishlist",wishlistp_path, style: 'color: #FFFFFF' %>
-</button>
-
-<button class="btnr">
-<%= link_to "logout", destroy_renter_session_path, method: :delete %>
-</button>
-<br>
-
- <br>
  <br>
 <% @propertylist.each do |prop|%>
 <div class="clearfix">
@@ -124,19 +208,11 @@ color:white;
 <span class="border"><%= prop.address %></span><br>
 <span>Property rent</span>
 <span class="border"><%= prop.rent%> Dollars per day</span><br>
-<span >Property City</span>
-<span class="border"><%= prop.city%></span><br>
 <span >Number of bedrooms</span>
 <span class="border"><%= prop.bedrooms%></span><br>
 <button class="btns">
-<%= link_to "Expore this property", viewproperty_path(prop)%>
+<%= link_to "View property", viewproperty_path(prop)%>
 </button>
-<%#<span >About Property</span>
-<span class="border"><%= prop.description%>
-<%#</span>
-</div>
-<%#(0...prop.images.count).each do |img| %>
-<%#= image_tag(prop.images[img])%>
-<%#end%>
+
 </div>
 <% end %>
