--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,8 +1,8 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
-body{
-    background: url( asset-path('.jpg') ) no-repeat;
+.index{
+    background: url( asset-path('real.jpg') ) no-repeat;
     background-size: 100% 100%;
     height: 800px;
    
