--- a/app/views/agent/viewapproach.html.erb
+++ b/app/views/agent/viewapproach.html.erb
@@ -1,8 +1,82 @@
+
+<style>
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #6699ff;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: blue;
+}
+.header{
+  text-align:center;
+  font-size:30px;
+  color:blue;
+}
+
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+tr:hover {background-color:#f5f5f5;}
+</style>
+
+<ul>
+  <li><%= link_to "back", displayprop_path(@property) ,class:"active"%></li>
+   <li style="float:right"><%= link_to "logout", destroy_agent_session_path, method: :delete %></li>
+</ul>
+<h1 text-align=center>Renters who are approached for this property</h1>
+
+<table width="50%" cellspacing="0">
+<thead>
+<th width="100">Renter Name</th>
+<th width="150">Email</th>
+<th width="90">Contact</th>
+<th width="50">Status</th>
+</thead>
+<tbody>
 <%@approachlist.each do |approach|%>
 <% @rentername=Renter.find(approach.renters_id)%>
-<%= @rentername.name%>
-<%=@rentername.email%>
-<%=@rentername.contact%>
-
-<%=link_to "Accept",addrentedprop_path(approach)%>
+<%#for dipsplay buttons%>
+<tr>
+<td><%= @rentername.name%></td>
+<td><%=@rentername.email%></td>
+<td><%=@rentername.contact%></td>
+<% if @property.flag == 1%>
+<% if @rentedp.renter_id == @rentername.id%>
+<td><%="Already Accepted"%></td>
+<%else%>
+<td><%="NIL"%></td>
 <%end%>
+<%else%>
+<td><%=link_to "Accept",addrentedprop_path(approach)%></td>
+<%end%>
+</tr>
+<%end%>
+
+</tbody>
+</table>
