--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 </head>
 
-<body>
+<body class="index">
 <h1 id=head> Real Estate Property Application</h1>
 <div id="parent">
         <div id="left">
