--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,6 +73,163 @@ a{color:inherit;text-decoration:none}
   .foot-lnk{
 	text-align:center;
 }
+		
+		body{
+		margin:0;
+		color:#6a6f8c;
+		background:white;
+		font:600 16px/18px 'Open Sans',sans-serif;
+  		
+		}
+		.center{
+		text-align: center;
+		color:#484848	;
+			}
+
+		*{
+		  box-sizing: border-box;
+		}
+
+	.box {
+ 	 float: left;
+  	width: 27.33%;
+  	padding: 30px;
+  	margin-left: 50px;
+	border-collapse: collapse;
+    background-color:#505050	; 
+   	border-radius: 40px;
+	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
+    min-height: 650px;
+	margin-top:10px;
+		}
+
+	.clearfix::after {
+	  content: "";
+ 	 clear: both;
+ 	 display: table;
+		}
+	.border{
+    
+		border-width: 1px;border-style: inset; 
+		border-radius: 10px;color: black;
+		width:100%;color:#ccc;
+		display:block;border-radius:25px;
+  		border:none;padding: 8px 10px;
+		background:rgba(255,255,255,.1);	
+		text-align:center;
+			}
+	.rent{
+		float: left;
+		border-width: 1px;border-style: inset; 
+		border-radius: 10px;color: black;
+		width:20%;color:#ccc;
+		display:block;border-radius:25px;
+  		border:none;padding: 8px 10px;
+		background:rgba(255,255,255,.1);
+		text-align:center;	
+	}
+	.bedrooms{
+		float: left;
+		border-width: 1px;border-style: inset; 
+		border-radius: 10px;color: black;
+		width:20%;color:#ccc;
+		display:block;border-radius:25px;
+  		border:none;padding: 8px 10px;
+		background:rgba(255,255,255,.1);
+		text-align:center;
+		margin-left :50%;
+	}
+	.align{
+	margin-right: 1000px;
+		}
+	.btn {
+  		border: none;font-size: 13px;
+  		cursor: pointer;
+		background-color: #333333;
+ ;
+  		color: white;padding: 5px 10px;
+  		border-radius: 12px;
+  		display: inline-block;
+		  margin-left:49px;
+  		}
+
+	.btn1 {
+  		border: none;border-radius: 22px;
+  		font-size: 14px;cursor: pointer;
+  		color: white;display: inline-block;
+  		background-color:  #333333;
+    		}
+
+	.btnr {
+		
+ 	 	border: none;border-radius: 22px;
+  		font-size: 14px;display: inline-block;
+ 	 	background-color:   #333333;
+ 	 	margin-left:49px;color: white;
+  		cursor: pointer;
+  			}
+
+	.btn:hover, .btnr:hover, .btn1:hover {
+	  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+	}
+
+.btns{
+  border: none;
+  background-color: blue;
+  border-radius: 5px;
+  font-size: 13px;
+  padding: 4px 4px;
+  color:white;
+  cursor: pointer;
+  display: inline-block;
+}
+.truncate {
+  width: 250px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+ .btns:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color:black;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: maroon;
+}
+.header{
+  text-align:center;
+  font-size:30px;
+  color:blue;
+}
+.br{
+	border-radius:1em;
+}
+.propname{
+	color:white;
+	font-size:16px;
+	text-align:center;
+}
+
   </style>
   
   </head>
