--- a/app/views/agent/viewapproach.html.erb
+++ b/app/views/agent/viewapproach.html.erb
@@ -1,35 +1,6 @@
 
 <style>
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #6699ff;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: blue;
-}
-.header{
-  text-align:center;
-  font-size:30px;
-  color:blue;
-}
-
 
 table {
   border-collapse: collapse;
@@ -42,7 +13,8 @@ th, td {
   border-bottom: 1px solid #ddd;
 }
 
-tr:hover {background-color:#f5f5f5;}
+tr:hover {background-color: #b3b3b3;}
+
 </style>
 
 <ul>
