--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -1,110 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-	
-	<style >
-		body{
-	margin:0;
-	color:#6a6f8c;
-	background:#c8c8c8;
-	font:600 16px/18px 'Open Sans',sans-serif;
-  background-color:#f2f2f2 ;
-	}
+<style>
+.sidebtn{
+  margin-left:90%;
+  border: none;
+  background-color:#333333;
+  border-radius: 5px;
+  font-size: 13px;
+  padding: 4px 4px;
+  color:white;
+  cursor: pointer;
+  display: inline-block;
 
-.center{
-  text-align:center;
 }
-*{
-  box-sizing: border-box;
+.rating{
+  margin-left:25px;
+  border-radius:30px;
+  width:10%;
+  padding:10px;
 }
 .review{
-  border-radius:13px;
-  shadow:black;
+  margin-left:25px;
+  border-radius:15px;
+  width:35%;
+  padding:5px;
 }
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-.border{
-    
-border-width: 1px;
- 
-border-radius: 5pxpx;
-color: white;
-width:30%;
-	color:;
-	padding: 10px;
-  	border-radius:25px;
-	background:#999999
-}
+.alignment{
+  margin-left:5%;
+  color:#8c8c8c
 
-.box {
-  float: left;
-  width: 23.33%;
-  padding: 30px;
-  margin-left: 10px;
-	border-collapse: collapse;
-  background-color:darkblue; 
-   border-radius: 40px;
-	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
-    min-height: 300px;
-    
 }
-
-.btn {
-  background-color: blue;
-  padding: 12px 24px;
-  border-radius: 12px;
-  font-size: 10px;
-  cursor: pointer;
-  color: white;
-  display: inline-block;
-}
-
-.btn:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-
-
- .btns:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #6699ff;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: blue;
-}
-.header{
-  text-align:center;
-  font-size:30px;
-  color:blue;
-}
+.sidebtn:hover{
+	  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+	}
+  .leftpad{
+    margin-left:30%;
+    width:50%;
+  }
 </style>
+
+</head>
 <body>
  <ul>
   <li><%=link_to "back",viewprop_path, class:"active"%></li>
   <li style="float:right"><%= link_to "logout", destroy_renter_session_path, method: :delete %></li>
   </ul>
-
+<br><br>
 <div class="center">
 Welcome <%=@renter.name%>
 <br>
@@ -115,23 +57,26 @@ Welcome <%=@renter.name%>
 <%@rentercheckflag=0%>
 <% if @property.flag == 0%>
 <%if @approachflag == 1%>
-your Approaches has been updated
+<div class="alignment" >your Approaches has been updated</div>
 <%else%>
-<%= link_to "Approach Property", addapproach_path(@property)%>
+<div class="sidebtn">
+<%= link_to "Approach Property", addapproach_path(@property)%></div>
 <%end%>
 <%else%>
 <%if @check.renter_id == current_renter.id %>
-The Agent Approved your request, check your mail and get connect with the agent:
+<div class="alignment" >The Agent Approved your request, check your mail and get connect with the agent:</div>
 <%@rentercheckflag=1%>
 <%else%>
-Property has been already booked by someone
-Still you can add it to your wishlist
-<%= link_to "Add to wishlist", addwishlist_path(@property)%>
+<div class="alignment">Sorry, This Property has been already booked by another renter, 
+Still you can add it to your wishlist</div>
+
+<%= link_to "Add to wishlist", addwishlist_path(@property),class:"sidebtn"%>
+
 <%end%>
 <%end%>
 <br>
 <br>
-<table style="width:100%">
+<table class="leftpad">
   <tr>
     <th>Property Name:</th>
     <td><%= @property.name%></td>
@@ -139,6 +84,10 @@ Still you can add it to your wishlist
   <tr>
     <th>Property rent:</th>
     <td><%= @property.rent%></td>
+  </tr>
+  <tr>
+    <th>Property Location:</th>
+    <td><%= @property.address%></td>
   </tr>
   <tr>
     <th>Property City</th>
@@ -166,15 +115,15 @@ Still you can add it to your wishlist
 </div>
 <br>
 <%if @rentercheckflag==1%>
-provide some ratings and reviews 
+<div class="alignment">provide some ratings and reviews </div>
 <%= form_for :@reviews, url:'/reviews'   do |f| %>
 <div class="group">
 <p>
-    <%= f.label :rating,class:"label"%><br>
-    <%= f.number_field :rating,class:"review",placeholder: "    Out of five",max: 5%>
+    <%= f.label :rating,class:"rating"%><br>
+    <%= f.number_field :rating,class:"rating",placeholder: "    Out of five",max: 5%>
     </p>
     
-    <%= f.label :reviews, class:"label"%><br>
+    <%= f.label :reviews, class:"rating"%><br>
     <%= f.text_area :reviews,class:"review" %>
   </p>
 <%= f.hidden_field :property_id, value: @property.id %>
@@ -186,14 +135,14 @@ provide some ratings and reviews
 <% @reviewslist.each do|review|%>
 <div>
 <% @rentername=Renter.find(review.renter_id)%>
-Name:
-<%=@renter.name%>
+<div class="alignment">Name:
+<%=@renter.name%></div>
 <br>
-Reviews
-<%=review.reviews%>
+<div class="alignment">Reviews:
+<%=review.reviews%></div>
 <br>
-Ratings:
-<%= review.rating %>
+<div class="alignment">Ratings:
+<%= review.rating %></div>
 <hr>
 </div>
 <%end%>
